--- a/CaseyTestApp/MainWindow.xaml
+++ b/CaseyTestApp/MainWindow.xaml
@@ -7,6 +7,27 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
-    </Grid>
+      <!--#region Top Level Grid Defintions-->
+    <Grid.RowDefinitions>
+      <RowDefinition Height="auto"/>
+      <RowDefinition Height="auto"/>
+      <RowDefinition Height="auto"/>
+      <RowDefinition Height="auto"/>
+    </Grid.RowDefinitions>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="auto"/>
+      <ColumnDefinition Width="auto"/>
+      <ColumnDefinition Width="auto"/>
+      <ColumnDefinition Width="auto"/>
+    </Grid.ColumnDefinitions>
+      <!--#endregion-->
+    <Label Content="Test 1:" Grid.Row="0" Grid.Column="0"/>
+    <TextBox Text="Test 1 TB" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" MinWidth="100"/>
+    <Label Content="Test2 :"  Grid.Row="0" Grid.Column="2"/>
+    <TextBox Text="Test 1 TB" Grid.Row="0" Grid.Column="3" HorizontalAlignment="Left" MinWidth="100"/>
+    <Label Content="Test3 :" Grid.Row="1" Grid.Column="0"/>
+    <TextBox Text="Test 1 TB" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" MinWidth="100"/>
+    <Label Content="Test4 :" Grid.Row="1" Grid.Column="2"/>
+    <TextBox Text="Test 1 TB" Grid.Row="1" Grid.Column="3" HorizontalAlignment="Left" MinWidth="100"/>
+  </Grid>
 </Window>
